--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <h1>Talabi Samuel's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr />
-    <a href="./public/movie-ranking.html"><h3>Movie Ranking project</H3></a>
-    <img src="./assets/movie ranking new.png" alt="movie ranking">
+    <a href="./movie-ranking.html"><h3>Movie Ranking project</H3></a>
+    <img src="./movie ranking new.png" alt="movie ranking">
     <br />
-    <a href="./public/birthday-invite.html"><h3>Birthday Invite Project</h3></a>
-    <img src="./assets/BIRTHDAY PIC.png" alt="Birthday Picture"/>
+    <a href="./birthday-invite.html"><h3>Birthday Invite Project</h3></a>
+    <img src="./BIRTHDAY PIC.png" alt="Birthday Picture"/>
     <hr />
-    <a href="./public/about.html">About me</a> 
-    <a href="./public/contact.html">Contact Me</a>
+    <a href="./about.html">About me</a> 
+    <a href="./contact.html">Contact Me</a>
 </body>
 
 </html>
