--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 <h1>About Me</h1>
 <p>My name is Talabi Samuel. I am the CEO of TSAM Global Pricision 
 Enterprises situated in Lagos state.
-I am a web developer. I have passion for tech and my business.</p>
+I am a web developer. I have a passion for tech and my business.</p>
   
-<P>I am a leader, energetic and a problem solver.
-A goal oriented who love motivating memebr of the team towards the 
-achievement of the organicational Goal.</P>
+<P>I am a leader, energetic, and a problem solver.
+A goal-oriented who loves motivating members of the team towards the 
+achievement of the organizational Goal.</P>
 
 <p>I believe in God and in myself. 
-  i do what i like and that makes me love what i do</p>
+  I do what I like and that makes me love what I do</p>
