--- a/movie-ranking.html
+++ b/movie-ranking.html
@@ -1,9 +1,9 @@
 <h1>The Best Movies According to Samuel</h1>
-<h2>My top 3 movies of all-time.</h2>
+<h2>My top 3 movies of all time.</h2>
 <hr />
 <h3>Gange of Lagos</h3>
-<p>The movie is about political palys in Nigeria; lagos precisely. its pretty cool.</p>
+<p>The movie is precisely about political plays in Nigeria; Lagos. it's pretty cool.</p>
 <h3>Brotherhood</h3>
-<p>it about twin brothers that chose two opposite profession, a thief and a police. however they ended up being a successful fellow. its a movie that worth your time.</p>
+<p> It is about twin brothers that chose two opposite professions, a thief and a police. however, they ended up being a successful fellow. it's a movie that worth your time.</p>
 <h3>Abejoye</h3>
-<p>a christian movie that talks about spiritual influence on human and how god can win them all</p>
+<p>a Christian movie that talks about the spiritual influence on humans and how god can win them all</p>
